argocd/apps/klnavi/overlays/dev/opentripplanner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentripplanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentripplanner
  minReadySeconds: 100
  template:
    spec:
      containers:
        - image: docker.io/opentripplanner/opentripplanner:2.5.0
          imagePullPolicy: IfNotPresent
          name: opentripplanner
